--- a/backend/rust/实用工具.md
+++ b/backend/rust/实用工具.md
@@ -316,5 +316,38 @@ mod tests {
       assert_eq!(vec![1, 3, 4, 5, 23], vec![1, 3, 4, 5, 23]);
     }
 }
+```
 
+写法2
+```js
+fn main() {
+   let mut list = vec![122, 21, 3,2,1222];
+   quick_sort(&mut list);
+   println!("{:?}", list);
+}
+
+fn quick_sort<T: Ord + Copy>(list: &mut [T]) {
+  quick_sort_part(list, 0, list.len());
+}
+
+fn quick_sort_part<T: Ord + Copy>(list: &mut [T], start: usize, end: usize) {
+  if start < end {
+    let mid = quick_partition(list, start, end);
+    quick_sort_part(list, start, mid);
+    quick_sort_part(list, mid+1, end);
+  }
+}
+
+fn quick_partition<T: Ord + Copy>(list: &mut [T], start: usize, end: usize) -> usize {
+    let p_val = list[start];
+    let mut j = end;
+    for i in (start+1..end).rev() {
+        if list[i] > p_val {
+            j -= 1;
+            list.swap(i, j);
+        }
+    }
+    list.swap(start, j-1);
+    j-1
+}
 ```
