--- a/backend/rust/开发案例.md
+++ b/backend/rust/开发案例.md
@@ -606,3 +606,143 @@ fn main() {
     println!("{}", json);
 }
 ```
+
+## 7、泛型
+### 7.1、最大值泛型
+```js
+fn largest_number(arr: &[i32]) -> i32 {
+    let mut largest = arr[0];
+    for index in 1..arr.len() {
+        if arr[index] > largest {
+            largest = arr[index];
+        }
+    }
+    largest
+}
+
+fn largest_char(arr: &[char]) -> char {
+    let mut largest = arr[0];
+    for index in 1..arr.len() {
+        if arr[index] > largest {
+            largest = arr[index];
+        }
+    }
+    largest
+}
+
+fn largest<T: std::cmp::PartialOrd + Copy>(arr: &[T]) -> T {
+    let mut largest = arr[0];
+    for index in 1..arr.len() {
+        if arr[index] > largest {
+            largest = arr[index];
+        }
+    }
+    largest
+}
+```
+
+### 7.2、冒泡
+
+## 8、端口嗅探器
+```js
+use std::{env, net::{IpAddr, TcpStream}, str::FromStr, process, thread, sync::mpsc::Sender, io::{self, Write}};
+
+const MAX_PORT: u16 = 65535;
+
+#[derive(Debug)]
+struct Arguments {
+  flag: String,
+  ip_addr: String,
+  threads: u16
+}
+
+impl Arguments {
+    fn new(args: &[String]) -> Result<Arguments, &'static str> {
+        if args.len() < 2 {
+            return Err("not enough arguments");
+        } else if args.len() > 4 {
+            return Err("too many arguments");
+        }
+        let flag = args[1].clone();
+        println!("flag: {}", flag);
+        if let Ok(ip_addr) = IpAddr::from_str(&flag) {
+            return Ok(Arguments {flag, ip_addr: ip_addr.to_string(), threads: 4});
+        } else {
+            // let flag = args[1].clone();
+            if flag.contains("-h") || flag.contains("-help") && args.len() == 2 {
+                println!("Usage: -j to select how many threads you want");
+                println!("Usage: -h or -help to show this help message");
+                return Err("help");
+            } else if flag.contains("-h") || flag.contains("-help") {
+                return Err("too many arguments");
+            } else if flag.contains("-j") {
+                let ip_addr = match IpAddr::from_str(&args[3]) {
+                    Ok(ip) => ip,
+                    Err(_) => return Err("invalid IP address")
+                };
+                let threads = match args[2].parse::<u16>() {
+                    Ok(t) => t,
+                    Err(_) => return Err("invalid thread number")
+                };
+                return Ok(Arguments {flag, ip_addr: ip_addr.to_string(), threads});
+            } else {
+                return Err("invalid argument");
+            }
+        }
+    }
+}
+
+fn main() {
+    let args: Vec<String> = env::args().collect();
+    let program = args[0].clone();
+    let arguments = Arguments::new(&args).unwrap_or_else(|err| {
+        if err.contains("-h")  || err.contains("-help") {
+            print!("{}", err);
+            process::exit(0)
+        } else {
+            println!("{} Problem parsing arguments: {}", program, err);
+            process::exit(0)
+        }
+    });
+    println!("{:#?}", arguments);
+
+    let num_threads = arguments.threads;
+    let (tx, rx) = std::sync::mpsc::channel::<u16>();
+    for i in 0..num_threads {
+        let tx = tx.clone();
+        let addr = arguments.ip_addr.clone();
+        thread::spawn(move || {
+          scan(tx, i, addr, num_threads);
+        });
+    }
+
+    let mut out = vec![];
+    drop(tx);
+    for p in rx {
+        out.push(p);
+    }
+    println!();
+    out.sort();
+    for v in out {
+        println!("{} is open", v);
+    }
+}
+
+fn scan(tx: Sender<u16>, start_port: u16, addr: String, num_threads: u16) {
+    let mut port: u16 = start_port + 1;
+    loop {
+        match TcpStream::connect(format!("{}:{}", addr, port)) {
+            Ok(_) => {
+                println!("{}:{}", addr, port);
+                io::stdout().flush().unwrap();
+                tx.send(port).unwrap();
+            },
+            Err(_) => {}
+        }
+        if (MAX_PORT - port) <= num_threads {
+            break;
+        }
+        port += num_threads;
+    }
+}
+```
