--- a/backend/rust/常用三方库.md
+++ b/backend/rust/常用三方库.md
@@ -1431,3 +1431,64 @@ impl eframe::App for Content {
   }
 }
 ```
+
+## 8、drive_builder
+### 8.1、安装
+```js
+[dependencies]
+drive_builder = "0.1"
+```
+
+### 8.2、使用
+#### 8.2.1、基本使用
+```js
+let mut ch = ChannelBuilder::default();
+ch.ipsum("world");
+let ch = ch.build().unwrap();
+println!("{:?}", ch);
+```
+
+#### 8.2.2、setter
+```js
+use derive_builder::Builder;
+
+#[derive(Builder, Debug)]
+struct Channel {
+    #[builder(setter(into, strip_option))]
+    ipsum: Option<String>,
+    #[builder(setter(into, strip_option), default)]
+    foo: Option<String>,
+}
+
+fn main() {
+    let ch = ChannelBuilder::default()
+        .ipsum("hello")
+        .build()
+        .unwrap();
+    println!("{:?}", ch);
+}
+```
+
+#### 8.2.3、重命名builder
+```js
+use derive_builder::Builder;
+
+#[derive(Builder, Debug)]
+#[builder(name = "FooConstructor")]
+struct Channel {
+    #[builder(setter(into, strip_option))]
+    ipsum: Option<String>,
+    #[builder(setter(into, strip_option), default)]
+    foo: Option<String>,
+    #[builder(setter(skip))] // 跳过该属性，会使用默认值
+    setter_skipped: String,
+}
+
+fn main() {
+    let mut ch = FooConstructor::default();
+    ch.ipsum("world");
+    // ch.setter_skipped("heee".to_string());
+    let ch = ch.build().unwrap();
+    println!("{:?}", ch);
+}
+```
