--- a/tool/vscode/常用扩展插件.md
+++ b/tool/vscode/常用扩展插件.md
@@ -151,3 +151,25 @@ content-type: application/json
 1. 代码差异对比
 
 ![Partial DIff](https://raw.githubusercontent.com/ryu1kn/vscode-partial-diff/master/images/public.gif)
+
+
+## Dot Log (代码对比) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=jaluik.dot-log">一键安装</MTargetBlank>
+1. 快速使用log打印变量
+
+### 使用方式
+```js
+xxx.clg => console.log('xxx', xxx )
+xxx.cwa => console.warn('xxx', xxx)
+xxx.cer => console.error('xxx', xxx)
+```
+
+![Dot Log](https://raw.githubusercontent.com/jaluik/dot-log/master/public/show.gif)
+
+
+## IntelliCode API Usage Examples (api示例插件) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=VisualStudioExptTeam.intellicode-api-usage-examples">一键安装</MTargetBlank>
+
+1. 鼠标悬停查找github对应api示例
+
+### 效果
+![IntelliCode API Usage Examples](/vscode/intellicode-api.png)
+![IntelliCode API Usage Examples](/vscode/intellicode-api2.png)
