--- a/backend/rust/开发技巧及注意事项.md
+++ b/backend/rust/开发技巧及注意事项.md
@@ -47,3 +47,31 @@ println!("n: {}, s: {}", n, s);
 #[derive(Copy, Clone, Debug)]
 struct Def(i32, i32);
 ```
+
+## 2、loop事件循环
+### 2.1、返回值
+```js
+let mut counter = 0;
+let res = loop {
+  if counter == 10 {
+    break counter;
+  }
+  counter += 1;
+}
+```
+
+### 2.2、退出指定循环
+```js
+fn main() {
+    let mut counter = 0;
+    'firstLoop: loop {
+        loop {
+            counter += 1;
+            if counter % 4 == 0 {
+                break 'firstLoop;
+            }
+        }
+    }
+    println!("counter: {counter}");
+}
+```
