--- a/tool/vscode/常用扩展插件.md
+++ b/tool/vscode/常用扩展插件.md
@@ -154,6 +154,7 @@ content-type: application/json
 
 
 ## Dot Log (代码对比) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=jaluik.dot-log">一键安装</MTargetBlank>
+![Dot Log](/vscode/dotlog.png)
 1. 快速使用log打印变量
 
 ### 使用方式
@@ -167,6 +168,7 @@ xxx.cer => console.error('xxx', xxx)
 
 
 ## IntelliCode API Usage Examples (api示例插件) <MTargetBlank link="https://marketplace.visualstudio.com/items?itemName=VisualStudioExptTeam.intellicode-api-usage-examples">一键安装</MTargetBlank>
+![IntelliCode API Usage Examples](/vscode/interllicode-example.png)
 
 1. 鼠标悬停查找github对应api示例
 
